噪音修改完成换了位置加了尺度

--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -64,8 +64,7 @@
 <div id='map'></div>
 
 <div id='menu' class="panel">
-    <!--切换底图功能暂时去掉，没有多大用-->
-    <!--<input id='basic' type='radio' name='rtoggle' value='basic'>
+    <input id='basic' type='radio' name='rtoggle' value='basic'>
     <label for='basic'>basic</label>
     <input id='streets' type='radio' name='rtoggle' value='streets'>
     <label for='streets'>streets</label>
@@ -76,12 +75,12 @@
     <input id='dark' type='radio' name='rtoggle' value='dark'>
     <label for='dark'>dark</label>
     <input id='satellite' type='radio' name='rtoggle' value='satellite'>
-    <label for='satellite'>satellite</label>-->    
+    <label for='satellite'>satellite</label>    
     <p>说明：L1~L9图层分别在zoom=15.5、15.0、...、12.0</p>
     <p id="xixi">zoom:xxx;     layer:xxx;</p>
     <button id="noiseControl">噪音</button>
     <button id="lightControl">光照</button>
-    <button id="cloudControl">云雾</button>
+    <!-- <button id="cloudControl">云雾</button> -->
 </div>
 
 <div id="noiseControlPanel" class="controlPanel panel">
@@ -106,9 +105,9 @@
     </div>
 </div>
 
-<div id="cloudControlPanel" class="controlPanel panel">
+<!-- <div id="cloudControlPanel" class="controlPanel panel">
     <p>这部分待集成进来</p>
-</div>
+</div> -->
 <script src="init.js"></script>
 </body>
 </html>
