集成了多尺度展示,还要换成国内的数据

--- a/lod/index.html
+++ b/lod/index.html
@@ -289,7 +289,7 @@ function drawViewPointAndScope(){
 	        "type": "symbol",
 	        "layout": {
 	            "icon-image": "attraction-15",
-	            "icon-rotation-alignment": "map",
+	            "icon-rotation-alignment": "viewport",
 	            "icon-offset":[0,-10]//实际显示的时候往上偏移一点否则看不到
 	        }
 	    });
