--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="https://www.mapbox.com/bites/00295/colorpicker.js"></script>
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v0.10.0/mapbox-gl-language.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
     <style>
         body { 
             margin:0; 
@@ -57,6 +58,12 @@
             cursor: -moz-crosshair;
             cursor: crosshair;
         }
+        #loadingMessage {
+            position: absolute;
+            left: 50%; 
+            top: 50%;
+            transform: translate(-50%, -50%); 
+        }
     </style>
 </head>
 <body>
@@ -64,11 +71,12 @@
 
 <div id='menu' class="panel">
     <p id="xixi">zoom:xxx;     layer:xxx;</p>
-    <button id="cityControl">城市</button>
-    <button id="baselayerControl">底图</button>
-    <button id="noiseControl">噪音</button>
-    <button id="lightControl">光照</button>
-    <!-- <button id="cloudControl">云雾</button> -->
+    <button id="cityControl" class="openPanel">城市</button>
+    <button id="baselayerControl" class="openPanel">底图</button>
+    <button id="noiseControl" class="openPanel">噪音</button>
+    <button id="lightControl" class="openPanel">光照</button>
+    <button id="multiScaleControl" class="openPanel">多尺度展示</button>
+    <!-- <button id="cloudControl" class="openPanel">云雾</button> -->
 </div>
 
 <div id="baselayerControlPanel" class="controlPanel panel">
@@ -114,10 +122,21 @@
     </div>
 </div>
 
+<div id="multiScaleControlPanel" class="controlPanel panel">
+    <button id="startMultiScale">开始</button>
+    <form id="lodMethod">
+    <input type="radio" name="lodMethod" value="distance" checked>根据距离&nbsp;
+    <input type="radio" name="lodMethod" value="way">当前方向&nbsp;
+    <!-- <input type="radio" name="lodMethod" value="road" disabled="true">当前道路 -->
+    </form> 
+</div>
+<div id="loadingMessage" style="display: none;">正在传输数据，请稍等...</div>
+
 <!-- <div id="cloudControlPanel" class="controlPanel panel">
     <p>这部分待集成进来</p>
 </div> -->
 <script src="init.js"></script>
 <script src="environment.js"></script>
+<script src="multiScale.js"></script>
 </body>
 </html>
