--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -125,8 +125,8 @@
 <div id="multiScaleControlPanel" class="controlPanel panel">
     <button id="startMultiScale">开始</button>
     <form id="lodMethod">
-    <input type="radio" name="lodMethod" value="distance" checked>根据距离&nbsp;
-    <input type="radio" name="lodMethod" value="way">当前方向&nbsp;
+    <input type="radio" name="lodMethod" value="distance">根据距离&nbsp;
+    <input type="radio" name="lodMethod" value="way" checked>当前方向&nbsp;
     <!-- <input type="radio" name="lodMethod" value="road" disabled="true">当前道路 -->
     </form> 
 </div>
