--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v0.10.0/mapbox-gl-language.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <style>
         body { 
             margin:0; 
@@ -64,6 +65,35 @@
             top: 50%;
             transform: translate(-50%, -50%); 
         }
+        .trips {
+            font:bold 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            position: absolute;
+            width: 25%;
+            top: 0;
+            right: 40px;
+            padding: 10px;
+            /* visibility: hidden; */
+            display: none;
+        }
+        .trips .trips-overlay-inner {
+            background-color: #fff;
+            box-shadow:0 1px 2px rgba(0, 0, 0, 0.20);
+            border-radius: 3px;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+        .trips label {
+            display: block;
+            margin: 0 0 10px;
+        }
+        .trips #trips-time-slider {
+            background-color: transparent;
+            display: inline-block;
+            width: 100%;
+            position: relative;
+            margin: 0;
+            cursor: ew-resize;
+        }
     </style>
 </head>
 <body>
@@ -71,12 +101,33 @@
 
 <div id='menu' class="panel">
     <p id="xixi">zoom:xxx;     layer:xxx;</p>
-    <button id="cityControl" class="openPanel">城市</button>
-    <button id="baselayerControl" class="openPanel">底图</button>
+    <button id="cityControl" class="openPanel">城市切换</button>
+    <button id="baselayerControl" class="openPanel">底图切换</button><br/>
+    <!-- <button id="trajectoryControl" class="openPanel">轨迹</button> -->
+    <button id="load-trips">Load Trips</button>
     <button id="noiseControl" class="openPanel">噪音</button>
     <button id="lightControl" class="openPanel">光照</button>
     <button id="multiScaleControl" class="openPanel">多尺度展示</button>
     <!-- <button id="cloudControl" class="openPanel">云雾</button> -->
+</div>
+
+<div id='trips' class='trips' >
+    <div class='trips-overlay-inner'>
+        <button id="trips-btn">Start</button>
+        <hr />
+        <label id='radios'>
+            Speed: 
+            <input type="radio" name='speed' id='180' value='180' checked/>1:180
+            <input type="radio" name='speed' id='90' value='90' />1:90
+            <input type="radio" name='speed' id='60' value='60' />1:60
+            <input type="radio" name='speed' id='30' value='30' />1:30
+            <input type="radio" name='speed' id='15' value='15' />1:15
+        </label>
+        <hr />
+        <label>Time: <span id='trips-time-value'>2007-02-20 07:00:00</span></label>
+        <input id='trips-time-slider' type='range' min='0' max='300' step='1' value='0' />
+        <span id='zoom-value'>zoom</span>
+    </div>
 </div>
 
 <div id="baselayerControlPanel" class="controlPanel panel">
@@ -99,6 +150,28 @@
     <input type="radio" name="city" value="Nanjing">南京<br/>
     <input type="radio" name="city" value="Guangzhou">广州<br/>
 </div>
+
+<!-- <div id="trajectoryControlPanel" class="controlPanel panel">
+    <div id='trips' class='trips' >
+        <div class='trips-overlay-inner'>
+            <button id="load-trips">Load Trips</button>
+            <button id="trips-btn">Start</button>
+            <hr />
+            <label id='radios'>
+                Speed: <br/>
+                <input type="radio" name='speed' id='180' value='180' checked/>1:180
+                <input type="radio" name='speed' id='90' value='90' />1:90
+                <input type="radio" name='speed' id='60' value='60' />1:60
+                <input type="radio" name='speed' id='30' value='30' />1:30
+                <input type="radio" name='speed' id='15' value='15' />1:15
+            </label>
+            <hr />
+            <label>Time: <span id='trips-time-value'>2007-02-20 07:00:00</span></label>
+            <input id='trips-time-slider' type='range' min='0' max='300' step='1' value='0' />
+            <span id='zoom-value'>zoom</span>
+        </div>
+    </div>
+</div> -->
 
 <div id="noiseControlPanel" class="controlPanel panel">
     <input type="checkbox" id="noise_road">道路<br/>
@@ -137,6 +210,7 @@
 </div> -->
 <script src="init.js"></script>
 <script src="environment.js"></script>
+<script src="animate.js"></script>
 <script src="multiScale.js"></script>
 </body>
 </html>
