新增水波扩散动态符号

--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -102,7 +102,7 @@
 <div id='menu' class="panel">
     <p id="xixi">zoom:xxx;     layer:xxx;</p>
     <button id="cityControl" class="openPanel">城市切换</button>
-    <button id="baselayerControl" class="openPanel">底图切换</button><br/>
+    <!-- <button id="baselayerControl" class="openPanel">底图切换</button><br/> -->
     <!-- <button id="trajectoryControl" class="openPanel">轨迹</button> -->
     <button id="load-trips">Load Trips</button>
     <button id="noiseControl" class="openPanel">噪音</button>
@@ -151,33 +151,12 @@
     <input type="radio" name="city" value="Guangzhou">广州<br/>
 </div>
 
-<!-- <div id="trajectoryControlPanel" class="controlPanel panel">
-    <div id='trips' class='trips' >
-        <div class='trips-overlay-inner'>
-            <button id="load-trips">Load Trips</button>
-            <button id="trips-btn">Start</button>
-            <hr />
-            <label id='radios'>
-                Speed: <br/>
-                <input type="radio" name='speed' id='180' value='180' checked/>1:180
-                <input type="radio" name='speed' id='90' value='90' />1:90
-                <input type="radio" name='speed' id='60' value='60' />1:60
-                <input type="radio" name='speed' id='30' value='30' />1:30
-                <input type="radio" name='speed' id='15' value='15' />1:15
-            </label>
-            <hr />
-            <label>Time: <span id='trips-time-value'>2007-02-20 07:00:00</span></label>
-            <input id='trips-time-slider' type='range' min='0' max='300' step='1' value='0' />
-            <span id='zoom-value'>zoom</span>
-        </div>
-    </div>
-</div> -->
-
 <div id="noiseControlPanel" class="controlPanel panel">
     <input type="checkbox" id="noise_road">道路<br/>
-    <input type="checkbox" id="road_noise">道路噪音<br/>
-    <input type="checkbox" id="noise_point">点<br/>
-    <input type="checkbox" id="point_noise">点噪音<br/>
+    <input type="checkbox" id="road_noise">噪音<br/>
+    <input type="checkbox" id="dynamic_symbol">声波动态符号
+    <!-- <input type="checkbox" id="noise_point">点<br/>
+    <input type="checkbox" id="point_noise">点噪音<br/> -->
 </div>
 
 <div id='lightControlPanel' class='controlPanel panel'>
