8月7日中期检查版本

--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -104,7 +104,7 @@
     <input type="checkbox" id="3dbuildings">三维建筑
     <input type="checkbox" id="road_noise">噪音
     <!-- <button id="baselayerControl" class="openPanel">底图切换</button><br/> -->
-    <button id="load-trips">Load Trips</button>
+    <button id="load-trips">加载轨迹</button><br/>
     <button id="cityControl" class="openPanel">城市切换</button>
     <button id="lightControl" class="openPanel">光照</button>
     <button id="multiScaleControl" class="openPanel">多尺度展示</button>
