二三维混搭近的高远的矮

--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -108,6 +108,7 @@
     <button id="cityControl" class="openPanel">城市切换</button>
     <button id="lightControl" class="openPanel">光照</button>
     <button id="multiScaleControl" class="openPanel">多尺度展示</button>
+    <button id="23D">二三维混搭</button>
     <!-- <button id="cloudControl" class="openPanel">云雾</button> -->
 </div>
 
@@ -185,5 +186,6 @@
 <script src="environment.js"></script>
 <script src="animate.js"></script>
 <script src="multiScale.js"></script>
+<script src="23D.js"></script>
 </body>
 </html>
